<resources>
    <string name="app_name">BloomBus Tracker</string>
    <string name="action_settings">Settings</string>
    <string-array name="loop_names_display">
        <item>Campus Loop</item>
        <item>Wal-Mart</item>
        <item>Downtown Loop</item>
        <item>Honeysuckle</item>
        <item>Late Night Shuttle</item>
    </string-array>
    <string-array name="loop_names_encoded">
        <item>campus</item>
        <item>walmart</item>
        <item>downtown</item>
        <item>honeysuckle</item>
        <item>latenight</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="display_overlay_switch_title">Display Overlay</string>
    <string name="action_privacy_policy_title">Privacy Policy</string>
    <string name="overlay_speed_label">Speed (m/s):</string>
    <string name="overlay_bearing_label">Bearing (deg):</string>
    <string name="overlay_altitude_label">Altitude (m):</string>
    <string name="overlay_dwelling_label">Dwelling:</string>
</resources>
